--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="scroll-trigger-top"></div>
+<div class="bigyeet" id="ABC">ABC</div>
+
   <app-root></app-root>
 </body>
 </html>
